--- a/LoanBills_Mobile/app.json
+++ b/LoanBills_Mobile/app.json
@@ -1,7 +1,8 @@
 {
   "expo": {
-    "name": "LoanBills_Mobile",
+    "name": "LoanBills Mobile",
     "slug": "LoanBills_Mobile",
+    "scheme": "loanbills",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -22,6 +23,24 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "plugins": [
+      "expo-router",
+      "expo-font"
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "c798c7b3-ffe1-472d-b7f1-ab7dd342f69a"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/c798c7b3-ffe1-472d-b7f1-ab7dd342f69a"
     }
   }
 }
