--- a/LoanBills_Mobile/app.json
+++ b/LoanBills_Mobile/app.json
@@ -33,7 +33,8 @@
         "origin": false
       },
       "eas": {
-        "projectId": "c798c7b3-ffe1-472d-b7f1-ab7dd342f69a"
+        "projectId": "c798c7b3-ffe1-472d-b7f1-ab7dd342f69a",
+        "owner": "bdev2468"
       }
     },
     "runtimeVersion": {
