--- a/LoanBills_Mobile/package.json
+++ b/LoanBills_Mobile/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.21",
     "expo-status-bar": "~1.12.1",
@@ -21,7 +22,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "expo-font": "~12.0.9"
+    "react-native-size-matters": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
