--- a/LoanBills_Mobile/package.json
+++ b/LoanBills_Mobile/package.json
@@ -18,13 +18,15 @@
     "expo-updates": "~0.25.22",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-size-matters": "^0.4.2",
     "react-native-web": "~0.19.10",
-    "react-dom": "18.2.0"
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
